--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.16.2",
+    "migrate": "^2.1.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
