--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.16.2",
+    "@tabler/icons-react": "^3.10.0",
     "migrate": "^2.1.0",
     "next": "14.2.4",
     "react": "^18",
